Mudança no frontEnd

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,13 @@
 
     <title>{% block title %} {% endblock %} </title>
 </head>
+<style>
+  body {
+    background-color: rgb(188, 194, 219);
+  }
+</style>
 <body>
-    <nav class="navbar navbar-expand-md" style="background-color: #48D1CC">
+    <nav class="navbar navbar-expand-md" style="background-color: #5986ad">
   <a class="navbar-brand" href="{{ url_for('index')}}">Apoio ao APLV</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
