--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <hr> 
     <header>
     <h1 id="topo"> {%block title %} Conhecendo mais sobre o assunto {% endblock %}</h1>
     </header>
-    <div class="w3-col m10 w3-padding">
-      <h1 class="w3-center w3-pale-blue">Vamos entender...</h1>
+    <hr> 
+    <div class="w3-padding">
+      <h1 class="w3-center w3-pale">Vamos entender...</h1>
         <br>
       <p class="w3-large">  A alergia à proteína do leite de vaca, conhecida como APLV, é a alergia alimentar mais comum durante a infância: estima-se que 2,2% das crianças são atingidas no primeiro ano de vida.
 Quem é alérgico ao leite de vaca pode apresentar desde sintomas bem leves, como uma urticária na pele, até reações bem graves, como o choque anafilático (reação alérgica súbita que pode ser fatal). Diante da suspeita de APLV, o bebê deve ser levado ao pediatra para que seja feito o diagnóstico correto e, caso confirmado, já se dê início ao tratamento.
@@ -102,7 +104,7 @@ Australian Society of Clinical Immunology and Allergy (“Cow’s milk dairy all
             Food Allergy Research & Education (“Milk Allergy”) )</p>
     </div>
         <hr>
-    <footer class="w3-right w3-padding-large" id="rodape" style="background-color: #48D1CC">
+    <footer class="w3-right w3-padding-large" id="rodape" style="background-color: #5986ad">
       <i style="font-size:36px" class="fa">&#xf09a;</i>
       <i style="font-size:36px" class="fa">&#xf16d;</i>
       <i style="font-size:36px" class="fa">&#xf2ab;</i>
