--- a/templates/doar.html
+++ b/templates/doar.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<hr> 
     <h1> {%block title %} Área de doação: Relação de Cadastrados {% endblock %}</h1>
-<br>
+<hr> 
 <!-- <form method="get">
     <div class="form-group w3-center">
         <label for="bairro">Filtro: Digite o seu Bairro e a Cidade</label><br>
@@ -14,10 +15,9 @@
     </div>
     <div class="form-group w3-center">
         <button type="submit" class="btn btn-primary">Filtar</button>
-    </div>
+    </div> -->
 </form>
--->
-<br>
+
     {% for post in posts %}
         <a href="{{ url_for('post', post_id=post['id'])}}">
             <h5>Nome: {{ post['nome'] }}</h5>
