--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1> {%block title %} Bem vindo ao Apoio a criança APLV {% endblock %}</h1>
+    <hr> 
+    <h1> {%block title %} Bem vindo ao apoio a criança APLV {% endblock %}</h1>
         <header class = "w3-center w3-display-containe w3-content w3-wide" id = "home">
-
+        <hr>        
         <img class="w3-image" src="../static/img/aler01.png" alt="Alergia do leite de vaca" width="15%">
-
-        <div class="w3-display-bottonleft w3-padding-large w3-pale-blue">
+        <hr>
+        <div class="w3-display-bottonleft w3-padding-large">
             <h3 class="w3-xxlarge">Conheça mais sobre a alergia ao leite de vaca</h3>
         </div>
-    </header>
+        </header>
     <div class="w3-content">
         <div class="w3-row w3-padding-64" id="sobre">
-            <div class="w3-col m6 w3-padding-large w3-show-small">
+            <div class="w3-col m6 w3-padding-large w3-show-large">
                 <img src="../static/img/form.jpg" alt="Formulas APLV" class="w3-round w3-image w3-opacity-min" alt="Table Setting" borde="0">
     </div>
     <div class="w3-col m6 w3-padding-xxxlarge">
-      <h1 class="w3-center w3-pale-blue">Nosso Objetivo</h1>
+      <h1 class="w3-center">Nosso Objetivo</h1>
       <h5 class="w3-center">Ajudar...</h5>
       <p class="w3-large">
           O objetivo deste projeto é realizar um grupo de apoio a famílias de crianças APLV, são famílias que necessitam
-           de muita ajuda, pois além de se encontrarem em situação com muitas dúvidas, a pessoa que sofre normalmente
-           é uma criança deixando os responsáveis ainda mais angustiados.
+           de muita ajuda, pois além de se encontrarem em situação com muitas dúvidas, o indivíduo que sofre com todos os males causados pela alergia
+           é uma criança o que deixa os responsáveis ainda mais angustiados.
          </p>
          <p class="w3-large">
           O foco principal será a realização de um banco de dados com responsáveis de APLV para que através de doações
@@ -34,8 +35,8 @@
          </p>
     </div>
         </div>
-
-    <footer class="w3-right w3-padding-large" id="rodape" style="background-color: #48D1CC">
+        <hr>    
+    <footer class="w3-right w3-padding-large" id="rodape" style="background-color: #5986ad">
       <i style="font-size:36px" class="fa">&#xf09a;</i>
       <i style="font-size:36px" class="fa">&#xf16d;</i>
       <i style="font-size:36px" class="fa">&#xf2ab;</i>
