Inserção de imagens

--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -22,22 +22,31 @@ O leite de vaca é o principal causador de alergias alimentares em crianças por
 Como o organismo das crianças é imaturo, o contato com a proteína do leite pode causar a alergia. Mas ela também pode ser provocada por uma predisposição genética.
 No início da doença, o pediatra pode sentir dificuldade de fazer um diagnóstico por conta de os sintomas serem muito similares a outros distúrbios.
       </p>
-       <p class="w3-large"><h3>Sintomas da APLV</h3></p>
-       <p class="w3-large"> Os sintomas podem ser imediatos e aparecer em até duas horas após a ingestão do leite de vaca. Também podem ser tardios e surgir horas ou dias após a alimentação com leite.
-As principais reações imediatas são:
-       </p>
-       <ul>
-           <li>Choque anafilático</li>
-           <li>Urticária aguda</li>
-           <li>Angiodema agudo (inchaço repentino sob a pele)</li>
-           <li>Sibilos (ruídos semelhantes a um assobio agudo, como em quem tem asma)</li>
-           <li>Rinite</li>
-           <li>Tosse seca</li>
-           <li>Vômitos</li>
-           <li>Edema de laringe, notado por rouquidão e dificuldade para respirar</li>
-           <li>Asma aguda com desconforto respiratório grave</li>
-       </ul>
-       <p class="w3-large"><h3>Sintomas tardios</h3></p>
+      <div>
+        <div class="w3-content">
+          <div class="w3-row w3-padding-16" id="sobre">
+            <div class="w3-col m6 w3-padding-small w3-show-large">
+                <img src="../static/img/sintomas.jpeg" alt="Sintomas" class="w3-round w3-image w3-opacity-min" alt="Table Setting" borde="0">
+            </div>
+        <div class="w3-col m6 w3-padding-small">
+          <p class="w3-large"><h3>Sintomas da APLV</h3></p>
+          <p class="w3-large"> Os sintomas podem ser imediatos e aparecer em até duas horas após a ingestão do leite de vaca. Também podem ser tardios e surgir horas ou dias após a alimentação com leite.
+          As principais reações imediatas são:
+          </p>
+               <ul>
+                   <li>Choque anafilático</li>
+                   <li>Urticária aguda</li>
+                   <li>Angiodema agudo (inchaço repentino sob a pele)</li>
+                   <li>Sibilos (ruídos semelhantes a um assobio agudo, como em quem tem asma)</li>
+                   <li>Rinite</li>
+                   <li>Tosse seca</li>
+                   <li>Vômitos</li>
+                   <li>Edema de laringe, notado por rouquidão e dificuldade para respirar</li>
+                   <li>Asma aguda com desconforto respiratório grave</li>
+               </ul>
+        </div>
+    </div>
+      <p class="w3-large"><h3>Sintomas tardios</h3></p>
        <ul>
            <li>Dermatite atópica (coceira e erupções na pele)</li>
            <li>Diarréia crônica</li>
@@ -66,7 +75,14 @@ O pediatra também fará um exame físico, com atenção especial à nutrição.
 Muitas vezes, o bebê volta a tolerar a proteína conforme seu organismo se desenvolve. Cerca de 80% das crianças têm a alergia resolvida entre três e cinco anos de idade. Mesmo que a alergia seja resolvida, a reintrodução de alimentos que contenham a proteína do leite deve ser supervisionada pelo médico.
 Muitas vezes, o bebê volta a tolerar a proteína conforme seu organismo se desenvolve. Cerca de 80% das crianças têm a alergia resolvida entre três e cinco anos de idade. Mesmo que a alergia seja resolvida, a reintrodução de alimentos que contenham a proteína do leite deve ser supervisionada pelo médico.
         </p>
-        <p class="w3-large"><h3>O que não pode comer</h3></p>
+        <div>
+          <div class="w3-content">
+            <div class="w3-row w3-padding-16" id="sobre">
+              <div class="w3-col m6 w3-padding-small w3-show-large">
+                  <img src="../static/img/proibido.png" alt="Derivados do leite" class="w3-round w3-image w3-opacity-min" alt="Table Setting" borde="0">
+              </div>
+          <div class="w3-col m6 w3-padding-small">
+            <p class="w3-large"><h3>O que não pode comer</h3></p>
         <p class="w3-large">A criança com APLV não pode comer nenhum alimento que contenha a proteína do leite de vaca, como:
         </p>
         <ul>
@@ -84,6 +100,8 @@ Muitas vezes, o bebê volta a tolerar a proteína conforme seu organismo se dese
             <li>Cream cheese</li>
             <li>Doce de leite</li>
         </ul>
+          </div>
+      </div>
         <p class="w3-large">A atenção deve ser redobrada quando a criança não se alimenta em casa, como na escola e em festinhas infantis. Sempre que os pais ou cuidadores não estiverem presentes, o adulto responsável deve ser informado sobre a condição do pequeno.</p>
         <p class="w3-large"><h3>O que pode comer</h3></p>
         <p class="w3-large">A criança pode comer quaisquers alimentos recomendados pelo médico que não apresentem a proteína do leite ou risco de contaminação cruzada, como carnes, vegetais, frutas, verduras, leguminosas, cereais e grãos.</p>
@@ -101,7 +119,7 @@ Revista Brasileira de Imunologia e Imunopatologia (“Guia prático de diagnóst
 Jornal de Pediatria da SBP (“Food allergy: a practical update from the gastroenterological viewpoint”)
 Hospital do Servidor Público Municipal de São Paulo (“Alergia à proteína do leite de vaca - Milena Ribeiro Macitelli”)
 Australian Society of Clinical Immunology and Allergy (“Cow’s milk dairy allergy”)
-            Food Allergy Research & Education (“Milk Allergy”) )</p>
+            Food Allergy Research & Education (“Milk Allergy”)</p>
     </div>
         <hr>
     <footer class="w3-right w3-padding-large" id="rodape" style="background-color: #5986ad">
