Formatação de páginas - justificar textos

--- a/templates/doar.html
+++ b/templates/doar.html
@@ -3,6 +3,7 @@
 {% block content %}
 <hr> 
     <h1> {%block title %} Área de doação: Relação de Cadastrados {% endblock %}</h1>
+    <p><h3>Clique no cadastro mais próximo de sua residência para realizar a doação.</h3></p>
 <hr> 
 <!-- <form method="get">
     <div class="form-group w3-center">
