--- a/templates/index.html
+++ b/templates/index.html
@@ -19,19 +19,14 @@
     <div class="w3-col m6 w3-padding-xxxlarge">
       <h1 class="w3-center">Nosso Objetivo</h1>
       <h5 class="w3-center">Ajudar...</h5>
-      <p class="w3-large">
-          O objetivo deste projeto é realizar um grupo de apoio a famílias de crianças APLV, são famílias que necessitam
-           de muita ajuda, pois além de se encontrarem em situação com muitas dúvidas, o indivíduo que sofre com todos os males causados pela alergia
-           é uma criança o que deixa os responsáveis ainda mais angustiados.
+      <p class="w3-large w3-justify">
+        O objetivo deste projeto é realizar um grupo de apoio a famílias de crianças que possuem diagnóstico de APLV: são famílias que necessitam de muita ajuda, pois além de se depararem com muitas dúvidas, o indivíduo que sofre com todos os males causados pela alergia é uma criança, o que deixa os responsáveis ainda mais angustiados.
          </p>
-         <p class="w3-large">
-          O foco principal será a realização de um banco de dados com responsáveis de APLV para que através de doações
-          de fórmulas por outros responsáveis que tenham essa fórmula sobresalente ou outros que se sensibilizarem a
-           fazer a doação.
+         <p class="w3-large w3-justify">
+            O foco principal será a realização de um banco de dados com responsáveis de crianças com APLV, para que haja o apoio às famílias, por meio de doações de fórmulas por empresas que tenham essa fórmula sobressalente e/ou outras pessoas que se sensibilizarem a fazer a doação.
          </p>
-         <p class="w3-large">
-          Com este cadastro, quem estiver interessado em fazer a doação, filtrará a família mais próxima de sua
-          residência e agendará a entrega em local firmado em comum acordo.
+         <p class="w3-large w3-justify">
+            Com este cadastro, quem estiver interessado em fazer a doação, filtrará a família mais próxima de sua residência e agendará a entrega em local firmado em comum acordo.
          </p>
     </div>
         </div>
