--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -12,13 +12,13 @@
       <p class="w3-large">  A alergia à proteína do leite de vaca, conhecida como APLV, é a alergia alimentar mais comum durante a infância: estima-se que 2,2% das crianças são atingidas no primeiro ano de vida.
 Quem é alérgico ao leite de vaca pode apresentar desde sintomas bem leves, como uma urticária na pele, até reações bem graves, como o choque anafilático (reação alérgica súbita que pode ser fatal). Diante da suspeita de APLV, o bebê deve ser levado ao pediatra para que seja feito o diagnóstico correto e, caso confirmado, já se dê início ao tratamento.
       </p>
-        <p class="w3-large"><h3>O que é APLV</h3></p>
-      <p class="w3-large">   As alergias alimentares são cada vez mais comuns entre as crianças e são provocadas pela reação do organismo a alguma proteína presente no alimento. Esse nutriente é absorvido pelo intestino, mas causa reações devido à sensibilidade do organismo.
+        <p class="w3-large w3-center"><h3>O que é APLV</h3></p>
+      <p class="w3-large w3-justify">   As alergias alimentares são cada vez mais comuns entre as crianças e são provocadas pela reação do organismo a alguma proteína presente no alimento. Esse nutriente é absorvido pelo intestino, mas causa reações devido à sensibilidade do organismo.
 No caso da APLV, a pessoa é alérgica à proteína presente no leite e seus derivados, como queijos, manteiga, requeijão, ricota, iogurte, creme de leite, doce de leite, leite condensado e cream cheese.
 O leite de vaca é o principal causador de alergias alimentares em crianças por dois motivos: é muito consumido e tem forte potencial alergênico, pois contém mais de 20 componentes protéicos.
       </p>
-        <p class="w3-large"><h3>Causas da APLV</h3></p>
-      <p class="w3-large">  Na maioria dos casos, os sintomas da APLV aparecem quando a criança começa a consumir leite de vaca e derivados, mas há também a possibilidade da alergia surgir mesmo em bebês nutridos exclusivamente de leite materno, por conta da alimentação da mãe. Nessas situações é recomendado que a mãe evite o consumo desses alimentos.
+        <p class="w3-large w3-center"><h3>Causas da APLV</h3></p>
+      <p class="w3-large w3-justify">  Na maioria dos casos, os sintomas da APLV aparecem quando a criança começa a consumir leite de vaca e derivados, mas há também a possibilidade da alergia surgir mesmo em bebês nutridos exclusivamente de leite materno, por conta da alimentação da mãe. Nessas situações é recomendado que a mãe evite o consumo desses alimentos.
 Como o organismo das crianças é imaturo, o contato com a proteína do leite pode causar a alergia. Mas ela também pode ser provocada por uma predisposição genética.
 No início da doença, o pediatra pode sentir dificuldade de fazer um diagnóstico por conta de os sintomas serem muito similares a outros distúrbios.
       </p>
@@ -29,7 +29,7 @@ No início da doença, o pediatra pode sentir dificuldade de fazer um diagnósti
                 <img src="../static/img/sintomas.jpeg" alt="Sintomas" class="w3-round w3-image w3-opacity-min" alt="Table Setting" borde="0">
             </div>
         <div class="w3-col m6 w3-padding-small">
-          <p class="w3-large"><h3>Sintomas da APLV</h3></p>
+          <p class="w3-large w3-center"><h3>Sintomas da APLV</h3></p>
           <p class="w3-large"> Os sintomas podem ser imediatos e aparecer em até duas horas após a ingestão do leite de vaca. Também podem ser tardios e surgir horas ou dias após a alimentação com leite.
           As principais reações imediatas são:
           </p>
@@ -46,7 +46,7 @@ No início da doença, o pediatra pode sentir dificuldade de fazer um diagnósti
                </ul>
         </div>
     </div>
-      <p class="w3-large"><h3>Sintomas tardios</h3></p>
+      <p class="w3-large w3-center"><h3>Sintomas tardios</h3></p>
        <ul>
            <li>Dermatite atópica (coceira e erupções na pele)</li>
            <li>Diarréia crônica</li>
@@ -56,8 +56,8 @@ No início da doença, o pediatra pode sentir dificuldade de fazer um diagnósti
            <li>Déficit de crescimento</li>
            <li>Inflamação dos intestinos com perda de proteínas</li>
        </ul>
-       <p class="w3-large"><h3>Como identificar a APLV</h3></p>
-       <p class="w3-large">O diagnóstico não é simples. Geralmente, é feito pelo histórico familiar do paciente e pelo conjunto de reações alérgicas já observadas pelos pais.
+       <p class="w3-large w3-center"><h3>Como identificar a APLV</h3></p>
+       <p class="w3-large w3-justify">O diagnóstico não é simples. Geralmente, é feito pelo histórico familiar do paciente e pelo conjunto de reações alérgicas já observadas pelos pais.
 O pediatra também fará um exame físico, com atenção especial à nutrição. Ele poderá observar:
        </p>
         <ul>
@@ -70,8 +70,8 @@ O pediatra também fará um exame físico, com atenção especial à nutrição.
             <li>Evolução do crescimento da criança.</li>
             <li>Detalhes da alimentação, como duração da amamentação e introdução de sólidos na dieta.</li>
         </ul>
-        <p class="w3-large"><h3>Tratamento da alergia à proteína do leite de vaca</h3></p>
-        <p class="w3-large">Durante o tratamento, a criança que tem APLV deve ter excluídos da sua dieta todos os alimentos que contenham a proteína do leite de vaca. A alergia não é causada pela quantidade ingerida, e sim pela proteína em si. Portanto, até uma pequena quantidade pode causar a reação alérgica.
+        <p class="w3-large w3-center"><h3>Tratamento da alergia à proteína do leite de vaca</h3></p>
+        <p class="w3-large w3-justify">Durante o tratamento, a criança que tem APLV deve ter excluídos da sua dieta todos os alimentos que contenham a proteína do leite de vaca. A alergia não é causada pela quantidade ingerida, e sim pela proteína em si. Portanto, até uma pequena quantidade pode causar a reação alérgica.
 Muitas vezes, o bebê volta a tolerar a proteína conforme seu organismo se desenvolve. Cerca de 80% das crianças têm a alergia resolvida entre três e cinco anos de idade. Mesmo que a alergia seja resolvida, a reintrodução de alimentos que contenham a proteína do leite deve ser supervisionada pelo médico.
 Muitas vezes, o bebê volta a tolerar a proteína conforme seu organismo se desenvolve. Cerca de 80% das crianças têm a alergia resolvida entre três e cinco anos de idade. Mesmo que a alergia seja resolvida, a reintrodução de alimentos que contenham a proteína do leite deve ser supervisionada pelo médico.
         </p>
@@ -82,7 +82,7 @@ Muitas vezes, o bebê volta a tolerar a proteína conforme seu organismo se dese
                   <img src="../static/img/proibido.png" alt="Derivados do leite" class="w3-round w3-image w3-opacity-min" alt="Table Setting" borde="0">
               </div>
           <div class="w3-col m6 w3-padding-small">
-            <p class="w3-large"><h3>O que não pode comer</h3></p>
+            <p class="w3-large w3-center"><h3>O que não pode comer</h3></p>
         <p class="w3-large">A criança com APLV não pode comer nenhum alimento que contenha a proteína do leite de vaca, como:
         </p>
         <ul>
@@ -102,13 +102,13 @@ Muitas vezes, o bebê volta a tolerar a proteína conforme seu organismo se dese
         </ul>
           </div>
       </div>
-        <p class="w3-large">A atenção deve ser redobrada quando a criança não se alimenta em casa, como na escola e em festinhas infantis. Sempre que os pais ou cuidadores não estiverem presentes, o adulto responsável deve ser informado sobre a condição do pequeno.</p>
-        <p class="w3-large"><h3>O que pode comer</h3></p>
-        <p class="w3-large">A criança pode comer quaisquers alimentos recomendados pelo médico que não apresentem a proteína do leite ou risco de contaminação cruzada, como carnes, vegetais, frutas, verduras, leguminosas, cereais e grãos.</p>
-        <p class="w3-large"><h3>A dieta da mãe que amamenta</h3></p>
-        <p class="w3-large">No caso dos bebês em aleitamento materno, o pediatra deve indicar a dieta restritiva à mãe, para que a amamentação não seja interrompida. Isso significa que ela deverá cortar da alimentação todos os alimentos que possuam a proteína do leite de vaca.</p>
-        <p class="w3-large"><h3>Diferenças entre APLV e intolerância à lactose</h3></p>
-        <p class="w3-large">A alergia ao leite de vaca é uma reação do sistema imunológico a uma proteína alimentar específica e os sintomas podem aparecer não apenas pela ingestão do leite, mas também pelo contato ou cheiro do alimento. Até por isso costuma-se indicar que os utensílios de cozinha usados para preparar as refeições do alérgico sejam separados dos outros.
+        <p class="w3-large w3-justify">A atenção deve ser redobrada quando a criança não se alimenta em casa, como na escola e em festinhas infantis. Sempre que os pais ou cuidadores não estiverem presentes, o adulto responsável deve ser informado sobre a condição do pequeno.</p>
+        <p class="w3-large w3-center"><h3>O que pode comer</h3></p>
+        <p class="w3-large w3-justify">A criança pode comer quaisquers alimentos recomendados pelo médico que não apresentem a proteína do leite ou risco de contaminação cruzada, como carnes, vegetais, frutas, verduras, leguminosas, cereais e grãos.</p>
+        <p class="w3-large w3-center"><h3>A dieta da mãe que amamenta</h3></p>
+        <p class="w3-large w3-justify">No caso dos bebês em aleitamento materno, o pediatra deve indicar a dieta restritiva à mãe, para que a amamentação não seja interrompida. Isso significa que ela deverá cortar da alimentação todos os alimentos que possuam a proteína do leite de vaca.</p>
+        <p class="w3-large w3-center"><h3>Diferenças entre APLV e intolerância à lactose</h3></p>
+        <p class="w3-large w3-justify">A alergia ao leite de vaca é uma reação do sistema imunológico a uma proteína alimentar específica e os sintomas podem aparecer não apenas pela ingestão do leite, mas também pelo contato ou cheiro do alimento. Até por isso costuma-se indicar que os utensílios de cozinha usados para preparar as refeições do alérgico sejam separados dos outros.
 Já as intolerâncias não envolvem o sistema imunológico. Na intolerância à lactose, a pessoa não produz a lactase, enzima responsável por quebrar o açúcar encontrado no leite e em produtos lácteos (lactose). Como resultado, vai sentir algum desconforto gástrico apenas quando ingerir a bebida ou seus derivados, dependendo da quantidade.
 A intolerância à lactose causa sintomas como náuseas, gases, inchaço e diarreia. Embora a intolerância à lactose possa gerar grandes desconfortos, não apresenta perigo como pode ocorrer com a APLV.<br><br>
             Fonte: https://www.danonenutricia.com.br/infantil/dificuldades-alimentares/sintomas-tratamento-aplv2</p>
